# RL_project

./: EFFICIENT_RL_GUIDE.md  FINAL_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_STATUS.md  README.md  RL_LAUNCH_GUIDE.md  ROBOT_SETUP_VERIFIED.md  demo_soma_training.py  ml_algorithm_improvements.md  ppo_soma_trainer.py  re_grasp_module.py  requirements.txt  run_full_training.py  simple_ppo_trainer.py  simple_robot_test.py  soma_cube_gym_env.py  test_launch_connection.py  test_robot_connection.py  test_ros2_manual.py  test_soma_env.py  train_model.py
install/: local_setup.sh  setup.sh
install/dsr_bringup2/lib/dsr_bringup2/: set_config
install/dsr_bringup2/share/dsr_bringup2/: package.sh
install/dsr_common2/share/dsr_common2/: package.sh
install/dsr_description2/share/dsr_description2/: local_setup.sh  package.sh
install/dsr_example/share/dsr_example/: package.sh
install/dsr_hardware2/share/dsr_hardware2/: package.bash  package.zsh
install/dsr_moveit_config_a0509/share/dsr_moveit_config_a0509/: package.sh
install/dsr_tests/share/dsr_tests/: dsr_bringup_without_spawner_test.launch.py  package.xml
install/m0609_block_assembly_rl/share/m0609_block_assembly_rl/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/m0609_block_assembly_rl/share/m0609_block_assembly_rl/launch/: rl_training.launch.py  simple_rl_training.launch.py  soma_cube_rl.launch.py
install/od_msg/share/od_msg/: package.bash  (+4 more)
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_soma_cube_rl_bridge__rosidl_generator_cExport-noconfig.cmake  export_soma_cube_rl_bridge__rosidl_generator_cppExport.cmake  export_soma_cube_rl_bridge__rosidl_generator_pyExport-noconfig.cmake  export_soma_cube_rl_bridge__rosidl_generator_pyExport.cmake  export_soma_cube_rl_bridge__rosidl_typesupport_fastrtps_cExport.cmake  export_soma_cube_rl_bridge__rosidl_typesupport_fastrtps_cppExport.cmake  soma_cube_rl_bridgeConfig.cmake  soma_cube_rl_bridge__rosidl_typesupport_cExport-noconfig.cmake  soma_cube_rl_bridge__rosidl_typesupport_cExport.cmake  soma_cube_rl_bridge__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/msg/: SafetyState.idl
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/srv/: GetSafetyState_Response.msg  RLReset.idl  RLStep_Request.msg
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/training_system/: setup.py
install/soma_cube_rl_bridge/share/soma_cube_rl_bridge/training_system/soma_cube_rl_training/: demo_training.py  rl_client.py  sac_trainer.py  train_somacube.py
log/: latest_build  latest_list
logs/full_training_1754642916/: events.out.tfevents.1754642916.rokey.46682.0  progress.csv
logs/full_training_1754642916/eval_logs/: evaluations.npz
logs/m0609_training_20250809_152628/: metrics.json
logs/production_1754644720/: events.out.tfevents.1754644723.rokey.48059.0
logs/production_simple_1754644791/: events.out.tfevents.1754644791.rokey.48422.0  progress.csv
logs/production_simple_1754644791/eval_logs/: evaluations.npz
logs/production_test_1754644781/: events.out.tfevents.1754644784.rokey.48252.0
logs/soma_cube_training_20250808_233651/tensorboard/: events.out.tfevents.1754663811.jack.28079.0
logs/soma_cube_training_20250808_233744/tensorboard/: events.out.tfevents.1754663864.jack.28305.0
logs/soma_cube_training_20250808_233807/tensorboard/: events.out.tfevents.1754663887.jack.29138.0
logs/soma_cube_training_20250808_233828/tensorboard/: events.out.tfevents.1754663908.jack.29240.0
logs/soma_cube_training_20250808_233843/tensorboard/: events.out.tfevents.1754663923.jack.29353.0
logs/soma_cube_training_20250808_234153/tensorboard/: events.out.tfevents.1754664113.jack.29561.0
logs/soma_cube_training_20250809_001742/tensorboard/: events.out.tfevents.1754666262.jack.31543.0
logs/soma_cube_training_20250809_003052/tensorboard/: events.out.tfevents.1754667052.jack.32456.0
logs/soma_v1_1754642331/: events.out.tfevents.1754642333.rokey.45664.0
logs/test_training_1754642529/: events.out.tfevents.1754642529.rokey.45999.0
logs/test_training_small_1754642539/: events.out.tfevents.1754642540.rokey.46051.0  progress.csv
logs/test_training_small_1754642539/eval_logs/: evaluations.npz
logs/training_integration_test_20250809_115412/: experiment_config.json  training_metrics.csv  training_metrics.jsonl  training_summary.json
logs/training_integration_test_20250809_115412/tensorboard/: events.out.tfevents.1754708052.jack.13561.1
models/: final_model.pth
models/best/: best_model_ep_1000.pth
models/m0609_ppo_20250809_152628/: best_model_ep_0.pth  checkpoint_ep_0.pth  interrupted_model.pth
src/soma_cube_rl_bridge/: CMakeLists.txt  INSTALLATION_VERIFICATION.md  README.md  TRAINING_GUIDE.md  demo_working_system.md  test_interfaces.py
src/soma_cube_rl_bridge/config/: soma_cube_rl_real.yaml  soma_cube_rl_sim.yaml
src/soma_cube_rl_bridge/include/soma_cube_rl_bridge/: safety_monitor_node.hpp
src/soma_cube_rl_bridge/launch/: soma_cube_rl.launch.py
src/soma_cube_rl_bridge/msg/: RLObservation.msg
src/soma_cube_rl_bridge/src/: motion_proxy_node.cpp  rl_env_node.cpp  safety_monitor_node.cpp
src/soma_cube_rl_bridge/srv/: GetSafetyState.srv
src/soma_cube_rl_bridge/training_system/: EXECUTION_GUIDE.md  EXECUTION_GUIDE_CORRECTED.md  package.xml  requirements.txt  run_training.sh  setup.cfg
src/soma_cube_rl_bridge/training_system/resource/: soma_cube_training_system
test_logs/manual_file_test_20250809_115410/: training_metrics.csv  training_metrics.jsonl  training_summary.json
test_logs/manual_ros2_test_20250809_115410/: training_metrics.csv  training_metrics.jsonl  training_summary.json
test_logs/manual_ros2_test_20250809_115410/tensorboard/: events.out.tfevents.1754708050.jack.13561.0
(+175 files in other folders)
