<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_tests</name>
  <version>0.0.0</version>
  <description>Doosan Robot System Tests including Block Assembly RL</description>
  <maintainer email="minju3.lee@doosan.com">doosan-robotics</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  
  <!-- Core ROS2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <!-- Doosan robot dependencies -->
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>dsr_common2</exec_depend>
  
  <!-- Python ML/RL dependencies -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
